--- a/css/helper.css
+++ b/css/helper.css
@@ -192,6 +192,12 @@
 .mxwp-20 {
     max-width: 20px;
 }
+.mxwp-50 {
+    max-width: 50px;
+}
+.mxwp-60 {
+    max-width: 60px;
+}
 .mxwp-100 {
     max-width: 100px;
 }
@@ -218,6 +224,9 @@
 }
 .mxwp-1200 {
     max-width: 1200px;
+}
+.mxwp-2400 {
+    max-width: 2400px;
 }
 
 
@@ -406,6 +415,9 @@
 }
 .mxhp-25 {
     max-height: 25px;
+}
+.mxhp-50 {
+    max-height: 50px;
 }
 .mxhp-60 {
     max-height: 60px;
