--- a/css/colors.css
+++ b/css/colors.css
@@ -3,7 +3,7 @@
     --ritalia: #ED1C24;
 
     --blanco: #fafafa;
-    --negro: #12191c;
+    --negro: #242424;
     --azul: #15364a;
     --celeste: #0096d7;
     /* Colores de maqueteo */
