--- a/css/style.css
+++ b/css/style.css
@@ -64,3 +64,27 @@ background-color: #fafafa;
     transition: all 0.2s ease-in;
     transition: all 0.2s ease-out;
 }
+
+.button-r {
+    background-color: var(--ritalia);
+    padding-left: 4rem !important;
+    padding-right: 4rem !important;
+    padding-top: 0.5rem !important; 
+    padding-bottom: 0.5rem !important; 
+    box-shadow: none !important;
+    border-radius: 50px;
+    color: var(--blanco);
+    border: 1px solid;
+    border-color: var(--blanco);
+    transition: all 0.2s ease-in;
+    transition: all 0.2s ease-out;
+    text-decoration: none !important;
+}
+
+.button-r:hover{
+    background-color: var(--negro);
+    transition: all 0.2s ease-in;
+    transition: all 0.2s ease-out;
+    color: var(--blanco);
+
+}
