--- a/css/style.css
+++ b/css/style.css
@@ -100,3 +100,8 @@ background-color: #fafafa;
     transition: all 0.2s ease-in;
     transition: all 0.2s ease-out;
 }
+
+.ease {
+    transition: all 0.2s ease-in;
+    transition: all 0.2s ease-out;
+}
