--- a/css/style.css
+++ b/css/style.css
@@ -116,3 +116,7 @@ background-color: #fafafa;
     transition: all 0.2s ease-in;
     transition: all 0.2s ease-out;
 }
+
+.pep-ajusteform {
+    padding-right: 100px;
+}
